# SpikeDrivenModularBenchmark

./: .gitignore  README.md  pyproject.toml  requirements-datasets.txt  requirements.txt
configs/: PATHS.example.yaml
configs/milestone1/encoding_sweep/: binary_voxel_grid.yaml  fixed_event_count_binary.yaml  fixed_time_binary.yaml  fixed_time_binary_T16.yaml  fixed_time_binary_T4.yaml  fixed_time_binary_T8.yaml  temporal_subsample_binary.yaml
configs/milestone1/feature_extractor_sweep/: conv_bn_lif_maxpool.yaml  conv_bn_maxpool_lif.yaml  depthwise_separable.yaml  dual_path_high_frequency.yaml  hierarchical_tokenizer.yaml  lif_conv_bn_maxpool_lif.yaml  resnet_local_ms.yaml
configs/milestone1/head_sweep/: class_neuron_accumulator.yaml  last_timestep_spike_readout.yaml  spatial_pooling_threshold.yaml  temporal_spike_voting.yaml
configs/milestone1/invalid/: attention_not_identity.yaml  sew_residual.yaml
configs/milestone1/real/: cifar10_dvs_m1_diagnostic.yaml  cifar10_dvs_smoke.yaml  dvs128_gesture_smoke.yaml
configs/milestone1/robustness/: early_truncation_3.yaml  event_drop_20.yaml  polarity_drop_20.yaml  (+3 more)
containers/: milestone1.def  pre_attention_benchmark.def
docs/: IMPLEMENTATION_NOTES.md
scripts/: aggregate_reports.py  run_in_screen_example.sh  run_pre_attention_suite.sh  run_sweep.py  validate_config.py
src/m1_benchmark/: config.py
src/pre_attention_benchmark/: __init__.py  config.py
tests/: test_activity_profiler.py  test_collector_metrics.py  test_config_files.py  test_feature_extractors.py  test_smoke.py  test_validators.py
(+83 files in other folders)
