[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pre-attention-benchmark"
version = "0.1.0"
description = "Spike-driven modular benchmark for thesis pre-attention benchmark"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "torch>=2.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
datasets = ["tonic>=1.4"]
all = ["pytest>=7.0", "tonic>=1.4"]

[tool.setuptools.packages.find]
where = ["src"]
